--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,14 +46,14 @@ import Ojan_Pic from '../images/Ojan.jpeg'
                     <h3 class="P2-D2-TermText">Zenriel@Zen</h3>
                     <h3 class="P2-D2-TermText">------------</h3>
                     <h3 class="P2-D2-TermText">OS: Windows, Linux(debian)</h3>
-                    <h3 class="P2-D2-TermText">Shell: cmd/powershell, bash</h3>
+                    <h3 class="P2-D2-TermText">Shell: cmd/powershell, zsh</h3>
                     <h3 class="P2-D2-TermText">Language: Python, JS</h3>
                     <h3 class="P2-D2-TermText">Framework: Flask</h3>
                     <h3 class="P2-D2-TermText">Uptime: 3.8 Years</h3>
-                    <h3 class="P2-D2-TermText">Theme: INTP</h3>
+                    <h3 class="P2-D2-TermText">Theme: 1337</h3>
                 </div>
             </div>
-            <h1 id="P2-D2-E3" class="P2">zenriel@zen:~$: </h1>
+            <h1 id="P2-D2-E3" class="P2">➜  zenriel git:(main) ✗</h1>
         </div>
     </Section>
     <script src="../scripts/index_script.js"></script>
