Changed JP Names and Variables

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,8 @@ import Ojan_Pic from '../images/Ojan.jpeg'
 <Main>
     <Section>
         <div id="P1-D1">
-            <h1 id="P1-D1-H1" class="P1-D1">やあ、俺はファウザン・リズキ</h1>
-            <h2 class="P1-D1">A.K.A ゼンリエル / Zenriel </h3>
+            <h1 id="P1-D1-H1" class="P1-D1">やあ、俺はファウザン・リズキー</h1>
+            <h2 class="P1-D1">A.K.A  Zenriel「ゼンリエル」 </h3>
         </div>
         <div id="P1-D2">
             <h2>Scroll Down</h2>
