--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import { Image } from 'astro:assets'
 import '../styles/global.css'
 import Section from '../layouts/section.astro'
 import Main from '../layouts/main.astro'
-import Ojan_Pic from '../images/Ojan.jpeg'
+import Ojan_Pic from '../images/OjanBlue.jpg'
 ---
 
 <Main>
