Updated purple theme

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Ojan_Pic from '../images/Ojan.jpeg'
 ---
 
 <Main>
-    <Section>
+    <Section id="P1">
         <div id="P1-D1">
             <h1 id="P1-D1-H1" class="P1-D1">やあ、俺はファウザン・リズキ</h1>
             <h2 class="P1-D1">A.K.A「ゼンリエル」Zenriel </h3>
