Ojan jd Hengker.exe

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import { Image } from 'astro:assets'
 import '../styles/global.css'
 import Section from '../layouts/section.astro'
 import Main from '../layouts/main.astro'
-import Ojan_Pic from '../images/OjanHengker.jpg'
+import Ojan_Pic from '../images/OjanHacker.jpg'
 ---
 
 <Main>
@@ -35,8 +35,8 @@ import Ojan_Pic from '../images/OjanHengker.jpg'
         </div>
         <div id="P2-D2" class="P2">
             <div id="P2-D2-D1" class="P2">
-                <h1 id="P2-D2-H1" class="P2">zenfetch.sh</h1>
-                <h1 id="P2-D2-H2" class="P2">-ox</h1>
+                <h1 id="P2-D2-H1" class="P2">&#160;&#160;&#160;zenfetch.sh</h1>
+                <h1 id="P2-D2-H2" class="P2">&#8210;&#160;O&#160;X&#160;</h1>
             </div>
             <div id="P2-D2-EX" class="P2">
                 <div id="P2-D2-D2" class="P2">
@@ -47,13 +47,12 @@ import Ojan_Pic from '../images/OjanHengker.jpg'
                     <h3 class="P2-D2-TermText">------------</h3>
                     <h3 class="P2-D2-TermText">OS: Windows, Linux(debian)</h3>
                     <h3 class="P2-D2-TermText">Shell: cmd/powershell, zsh</h3>
-                    <h3 class="P2-D2-TermText">Language: Python, JS</h3>
-                    <h3 class="P2-D2-TermText">Framework: Flask</h3>
-                    <h3 class="P2-D2-TermText">Uptime: 3.8 Years</h3>
-                    <h3 class="P2-D2-TermText">Theme: 1337</h3>
+                    <h3 class="P2-D2-TermText">Language: JS, Python</h3>
+                    <h3 class="P2-D2-TermText">Framework: Astro, Flask</h3>
+                    <h3 class="P2-D2-TermText">Theme: Myth(ISO from Valorant)</h3>
                 </div>
             </div>
-            <h1 id="P2-D2-E3" class="P2">➜  zenriel git:(main) ✗</h1>
+            <h1 id="P2-D2-E3" class="P2">➜  zenriel ✗</h1>
         </div>
     </Section>
     <script src="../scripts/index_script.js"></script>
