--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -139,12 +139,14 @@ h1, h2 {
     margin-right: 2vw;
     margin-left: 2vw;
     border: 1px solid white;
+    border-radius: 10px;
 }
 
 #P2-D2-D1 {
     display: flex;
     flex-direction: row;
     border: 1px solid white;
+    border-radius: 10px 10px 0px 0px;
 }
 
 #P2-D2-H1 {
@@ -163,7 +165,7 @@ h1, h2 {
 }
 
 #P2-D2-I1 {
-    border: 1px solid #00FF00;
+    border: 1px solid #FFFFFF;
     opacity: 0;
     width: 20vw;
     height: 20vw;
@@ -195,7 +197,7 @@ h1, h2 {
 }
 
 .P2-D2-TermText {
-    color: rgb(0, 255, 0);
+    color: #FFFFFF;
     font-family: 'Ubuntu Mono', sans-serif;
     font-size: 1.25vw;
     font-weight: normal;
