Fixed hengker issue

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,8 +35,8 @@ import Ojan_Pic from '../images/OjanHacker.jpg'
         </div>
         <div id="P2-D2" class="P2">
             <div id="P2-D2-D1" class="P2">
-                <h1 id="P2-D2-H1" class="P2">&#160;&#160;&#160;zenfetch.sh</h1>
-                <h1 id="P2-D2-H2" class="P2">&#8210;&#160;O&#160;X&#160;</h1>
+                <h1 id="P2-D2-H1" class="P2">zenfetch.sh</h1>
+                <h1 id="P2-D2-H2" class="P2">- o x</h1>
             </div>
             <div id="P2-D2-EX" class="P2">
                 <div id="P2-D2-D2" class="P2">
