Fixed ojan_pic sizing in mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -263,6 +263,11 @@ h1, h2 {
         margin-left: 65vw;
     }
 
+    #P2-D2-D2 {
+        height: 30vw;
+        width: 30vw;
+    }
+
     #P2-D2-I1 {
         width: 30vw;
         height: 30vw;
